fixed style issues that cropped up in navbar when we put bootstrap 3 classes in navbar and content divs

--- a/css/css/mlearningstyle.css
+++ b/css/css/mlearningstyle.css
@@ -49,7 +49,7 @@ div#leftColumn.col-md-4 {
 }
 div#main{ min-height: 100%; }
 
-div#sidebar-left.span3{
+div#sidebar-left.span3, #sidebar-left{
 		width:auto; /*needed to keep this to a reasonable width*/
 		height:100%;
 		/*padding-bottom:999em;
@@ -491,7 +491,9 @@ padding-top:2px;
 }
 .nav-tabs > li {
 	margin-bottom:0px;
-
+}
+.nav-tabs>li>a {
+    margin-right:0px;
 }
 .nav-tabs.nav-stacked > li > a, .nav-tabs.nav-stacked > li > ul > li > a {
 	    padding: 14px 6px 6px 6px;
@@ -521,8 +523,8 @@ padding-top:2px;
 
 
 #sidebar-left a.navlevel1 {
-	/*border-top:1px solid #3A3A3A;*/
-	border-bottom:2px solid #666666;
+	/*border-top:1px solid #3A3A3A;
+	border-bottom:2px solid #666666;*/
 	}
  
 #sidebar-left a.navlevel2 span { margin-left:12px;font-size:95%;display:block;   }
@@ -1066,8 +1068,14 @@ a.tryagainLink, a:visited.tryagainLink{
 }
 
 .nav-tabs.nav-stacked  {
-	margin:0px -2px;
+	/* margin:0px -2px;
+		margin:0px; */
 }
+
+.nav-tabs.nav-stacked > li:first-child > a{
+margin-right:2px;
+}
+
 .nav-stacked >li+li{
 	margin-top:0px;
 }  
